Fix card hrefs and enable infinite scroll sentinel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>这是 状态栏标题 </title>
+  <title>4ak5ra's Blog </title>
 
   <!-- 自己的布局文件 -->
   <link rel="stylesheet" href="./css/reset.css" />
