--- a/pages/posts.html
+++ b/pages/posts.html
@@ -25,7 +25,7 @@
 
       
       <section id="posts-list" class="posts-grid" aria-live="polite" aria-busy="false"></section>
-      <div id="loadMore" class="posts-load-more muted" aria-hidden="true">Loading…</div>
+      <div id="loadMore" class="posts-load-more muted" aria-hidden="false">Loading…</div>
 
     </section>
 
